--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-copy": "0.5.x",
+    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-jshint": "~0.1.1",
-    "grunt-contrib-uglify": "^0.10.0",
     "grunt-karma": "^2.0.0",
     "jasmine-core": "^2.5.2",
     "jqlite": "^0.2.41",
